Kea 1.0.0-beta released on December 8, 2015

1066.	[func]		tomek
	Configuration parameters for setting up external hosts storage
	are now implemented. This feature is considered experimental
	for DHCPv4 and currently not really usable for DHCPv6.
	(Trac #3569, git 8896c9c3f77a7836d67e6c33943ac4892b851213)

1065.	[func]		fdupont,tomek
	The DHCPv4 server now stores Relay Agent Information option as
	the last one.
	(trac #4121, git 2f883d4afb9b27c6c59d993692370685b206b6c2)

1064.	[doc]		tmark
	Added Kea logo to documentation.
	(trac #3702, git 7cae813ffe9a7320db5c84ac4beb1c3c0ecabbf7)

1063.	[func]		marcin
	It is possible to disable writing generated DHCPv6 server
	identifier in a persistent storage. This also fixes a
	failing distcheck.
	(trac #4211, git d8f39b7aff9312237d4b6d6de39a7336a25ead4c)

1062.	[func]		marcin
	libeval: options may be referenced by their names in
	expressions used for client classification.
	(Trac #4204 git 38aebe9566e09daa30796df686cfdd6d0c43fa4d)

1061.	[func]		kalmus
	MySqlHostDataSource class implementation. It provides methods
	for adding and extracting Host objects to and from MySQL database.
	(Trac #3682, git 275b40fb941a6934c6434715184ae1c39f3fb3f2)

1060.	[func]		stephen
	Incremented KEA_HOOKS_VERSION to 3 for Kea 1.0.
	(Trac #4208, git bf6f3d495604942a395b51bbe4c37001b7541242)

1059.	[func]		nicolas
	The client packet is now passed as a new parameter "query4"
	to the pkt4_send hook point. Thanks to Nicolas Chaigneau from
	Capgemini for providing this patch.
	(Github #8, git )

1058.	[func]		tomek
	Two new hook points lease4_recover and lease6_recover have been
	implemented. They are called when a declined IPv4 or IPv6 lease
	concludes its probation period and is being recovered into
	usable state.
	(Trac #3988, 3989, git 1930797c48fee7f4006a33cecd6f08b05ae76725)

1057.	[func]		marcin
	It is now possible to specify type and value of a DUID used
	as DHCPv6 server identifier.
	(trac #3874, git faf52b069cf774d0050d76b4f47b542b2b5105f2)
